revert to mac only (for now)(pain)